Fix for next and prev buttons on mobile not displaying correctly after build.

--- a/src/components/project/carouselProject/carouselProject.scss
+++ b/src/components/project/carouselProject/carouselProject.scss
@@ -66,7 +66,9 @@
   }
   @media(max-width: 47.9375rem) {
     .slick-arrow.slick-prev, .slick-arrow.slick-next {
-      inset: initial;
+      top: initial;
+      right: initial;
+      left: initial;
       bottom: 1.875rem;
     }
     .slick-arrow.slick-prev {
